<?xml version="1.0"?>
<package>
  <name>guardian_terabot_moveit_bringup</name>
  <version>1.0.0</version>
  <description>The guardian_terabot_moveit_bringup package</description>

  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>


  <url type="website">http://wiki.ros.org/guardian_terabot_moveit_bringup</url>

  <author email="rnavarro@robotnik.es">Román Navarro</author> 

  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
